<resources>
    <string name="app_name">GreedyMan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="title_activity_dashboard">Greedy Man</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="new_appointment">New Appointment</string>
    <string name="my_schedule">My Schedule</string>
    <string name="friend">Friend</string>
    <string name="add_friend">Add Friend</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_templete">TabTempleteActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appointment_name">Appointment name</string>
    <string name="_09_11_2000_1_00_2_00">09/11/2000 1.00 - 2.00</string>
    <string name="at_middle_of_nowhere">At Middle of Nowhere</string>
    <string name="with_nobody">With nobody</string>
</resources>
