<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_appointment"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/new_appointment" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/friend" />
        <item
            android:id="@+id/nav_add_friend"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/add_friend" />
    </group>

</menu>
